--- a/src/components/Frame/style.module.css
+++ b/src/components/Frame/style.module.css
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400');
+
 :global(body)
 {
-    font-family: sans-serif;
+    font-family: 'Quicksand', sans-serif;
     font-size: 15px;
-    line-height: 1.5em;
+    line-height: 1.6em;
 
     margin: 0;
     padding: 0;
 
-    letter-spacing: .05em;
+    letter-spacing: .06em;
 }
 
 :global(.headroom)
