--- a/src/components/ProjectTeaser/style.module.css
+++ b/src/components/ProjectTeaser/style.module.css
@@ -1,8 +1,12 @@
 .teaser
 {
+    position: relative;
+
     order: 1;
 
+    box-sizing: border-box;
     width: calc(100% / 3);
+    padding: 30px;
 
     transition: all .3s ease-in-out;
 }
@@ -13,12 +17,39 @@
 
     box-sizing: border-box;
     padding: 30px;
+
+    text-decoration: none;
+}
+
+.titleWrapper
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    transition: opacity .3s ease-in-out;
+
+    opacity: 0;
+    background-color: rgba(0, 0, 0, .5);
 }
 
 .title
 {
-    display: none;
+    font-size: 16px;
+    font-weight: 200;
+
+    margin: 20px auto 0;
+
+    text-align: center;
+
+    color: #fff;
 }
+
+.teaser:hover .titleWrapper
+{
+    opacity: 1;
+}
+
 
 @media (max-width: 1024px)
 {
@@ -63,6 +94,27 @@
     }
 }
 
+@media (min-width: 768px)
+{
+    .titleWrapper
+    {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+        margin: 0;
+    }
+
+    .title
+    {
+        font-size: 30px;
+
+        margin: 0 auto;
+    }
+}
+
 @media (max-width: 768px)
 {
     .teaser
@@ -73,5 +125,19 @@
     .asos
     {
         order: 0;
+    }
+
+    .titleWrapper
+    {
+        opacity: 1;
+    }
+
+    .asos .title,
+    .beamly .title,
+    .sohoHouse .title,
+    .engage .title,
+    .no1Traveller .title
+    {
+        color: #2d2d2d;
     }
 }
