--- a/src/components/Footer/style.module.css
+++ b/src/components/Footer/style.module.css
@@ -2,13 +2,15 @@
 {
     flex-shrink: 0;
 
-    padding: 15px 35px;
+    padding: 30px;
 
     text-align: center;
 }
 
 .copyright
 {
+    font-size: 11px;
+
     margin: 0;
 
     color: #999;
