--- a/src/components/Masonary/style.module.css
+++ b/src/components/Masonary/style.module.css
@@ -4,23 +4,22 @@
     align-items: flex-start;
     flex-flow: column wrap;
 
+    transition: opacity .3s ease-in-out;
+
     opacity: 0;
 }
 
 .container.isLoaded
 {
-    animation: FadeIn .3s ease-in-out forwards;
+    opacity: 1;
 }
 
-@keyframes FadeIn
+.title
 {
-    0%
-    {
-        opacity: 0;
-    }
+    font-size: 40px;
+    font-weight: 200;
+    line-height: 1.2;
 
-    100%
-    {
-        opacity: 1;
-    }
+    margin: 0 auto 30px;
+    padding: 0 30px;
 }
