--- a/src/components/Nav/style.module.css
+++ b/src/components/Nav/style.module.css
@@ -30,3 +30,11 @@
     color: #222;
     border-bottom: 1px solid #222;
 }
+
+@media (max-width: 768px)
+{
+    .nav
+    {
+        margin-top: 30px;
+    }
+}
