--- a/src/components/ProjectTeaser/style.module.css
+++ b/src/components/ProjectTeaser/style.module.css
@@ -6,9 +6,14 @@
 
     box-sizing: border-box;
     width: calc(100% / 3);
-    padding: 30px;
+    padding: 60px;
 
     transition: all .3s ease-in-out;
+}
+
+.teaser.isDisabled
+{
+    opacity: .7;
 }
 
 .link
@@ -16,21 +21,8 @@
     display: block;
 
     box-sizing: border-box;
-    padding: 30px;
 
     text-decoration: none;
-}
-
-.titleWrapper
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    transition: opacity .3s ease-in-out;
-
-    opacity: 0;
-    background-color: rgba(0, 0, 0, .5);
 }
 
 .title
@@ -102,9 +94,18 @@
         top: 0;
         left: 0;
 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
         width: 100%;
         height: 100%;
         margin: 0;
+
+        transition: opacity .3s ease-in-out;
+
+        opacity: 0;
+        background-color: rgba(0, 0, 0, .5);
     }
 
     .title
@@ -120,16 +121,17 @@
     .teaser
     {
         width: 100%;
+        padding: 30px;
+    }
+
+    .teaser.isHidden
+    {
+        display: none;
     }
 
     .asos
     {
         order: 0;
-    }
-
-    .titleWrapper
-    {
-        opacity: 1;
     }
 
     .asos .title,
